[metadata]
name = fuel-ccp-tests
summary = Tests tools for Fuel CCP
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[files]
packages =
    fuel_ccp_tests

[entry_points]
console_scripts =
    fuel_ccp_tests = fuel_ccp_tests.run_test:shell
